--- a/index.html
+++ b/index.html
@@ -1,54 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <title>Document</title>
-
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/80833262c1.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" type="text/css" href="./style.css">
+    <title>Weather App</title>
 </head>
-
 <body>
+
+    <header class="header">
+        <h1>Your Weather Channel</h1>
+    </header>
+
     <div class="container">
-        <div class="jumbotron" style="background-color:#20315a;">
-            <h1><i class="fas fa-cloud-sun"></i><strong> Weather Dashboard</strong></h1>
+        <div class="search">
+            <div class="row">
+                <h1>Search for a City:</h1>
+            </div>
+            <div class="row">
+                <input type="text" class="searchInput" placeholder="City Name">
+                <button type="submit" class="searchBtn">
+                <i class="fas fa-search"></i>
+                </button>
+            </div>
+            <div class="historyItems"></div>
         </div>
-    </div>
-
-
-    <div class=container style="float: left; max-width: 500px;">
-
-        <div class="form-row">
-            <div class="col-md-6 mb-3">
-                <label for="validationServer03">City</label>
-                <input type="text" class="form-control is-invalid" id="validationServer03"
-                    aria-describedby="validationServer03Feedback" required>
-                <div id="validationServer03Feedback" class="invalid-feedback">
-                    Please provide a valid city.
+        <div class="col-two-container">
+            <div class="forecast">
+                <div class="row">
+                    <h1 class="cityName">City Name</h1>
+                    <h1 class="currentDate"></h1>
+                    <img class="weatherIcon"></img>
+                </div>
+                <div class="row">
+                    <p class="temp">Temperature:</p>
+                </div>
+                <div class="row">
+                    <p class="humidity">Humidity:</p>
+                </div>
+                <div class="row">
+                    <p class="windSpeed">Wind Speed:</p>
+                </div>
+                <div class="row">
+                    <p class="uvIndex">UV Index:</p>
                 </div>
             </div>
 
+            <div class="five-day-container">
+                <h1>5-Day Forecast:</h1>
+                <div class="card-row">
+                </div>
+            </div>
         </div>
-
-        <button type="button" class="btn btn-warning">Search</button>
-
     </div>
     
-
-
-
-
-
-    <script src="./assets/script.js"></script>
-    <script src="https://kit.fontawesome.com/a4148159df.js" crossorigin="anonymous"></script>
 </body>
+<script src="./script.js"></script>
 <br>
 <footer>
     
-        <h4>Made by AMRB</h4>
+        <h4>Made by Anthonny R.</h4>
         <p>
             &copy; 2020 AMRB Delevoper, Inc.
         </p>
